--- a/foodtaskerapp/templates/home.html
+++ b/foodtaskerapp/templates/home.html
@@ -1,32 +1,19 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-    <title>Home</title>
-</head>
+<head><meta charset="utf-8"><title>Home</title></head>
 <body>
+  <h2>Home</h2>
 
-{% if user.is_authenticated %}
-    <h2>Welcome, {{ user.username }}</h2>
-    <p>You are logged in.</p>
-{% else %}
-    <h2>Login</h2>
+  {% if user.is_authenticated %}
+    <p>Logged in as: <b>{{ user.username }}</b></p>
 
-    {% if error %}
-        <p style="color:red;">{{ error }}</p>
-    {% endif %}
-
-    <form method="post">
-        {% csrf_token %}
-        <input type="text" name="username" placeholder="Username" required><br><br>
-        <input type="password" name="password" placeholder="Password" required><br><br>
-        <button type="submit">Login</button>
+    <form method="post" action="{% url 'logout' %}">
+      {% csrf_token %}
+      <button type="submit">Logout</button>
     </form>
-{% endif %}
-
-<form method="post" action="{% url 'logout' %}">
-    {% csrf_token %}
-    <button type="submit">Logout</button>
-</form>
-
+  {% else %}
+    <p><a href="{% url 'login' %}">Login</a></p>
+    <p><a href="{% url 'register' %}">Register</a></p>
+  {% endif %}
 </body>
 </html>
