--- a/foodtaskerapp/templates/login.html
+++ b/foodtaskerapp/templates/login.html
@@ -1,9 +1,6 @@
 <!doctype html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>Login</title>
-</head>
+<head><meta charset="utf-8"><title>Login</title></head>
 <body>
   <h2>Sign In</h2>
 
@@ -21,5 +18,7 @@
 
     <button type="submit">Login</button>
   </form>
+
+  <p>No account? <a href="{% url 'register' %}">Register</a></p>
 </body>
 </html>
